--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,16 @@
 name = "NetworkServer"
 uuid = "3c103c41-cc87-41db-8ef2-7e6c5a468f4f"
 authors = ["Julian Fritzsch <julian.fritzsch@etu.unige.ch>"]
-version = "0.0.1"
+version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Oxygen = "df9a0d86-3283-4920-82dc-4555fc0d1d8b"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
